examples/errors/missing_return_while/main.hd
fn find(x: int): int {
    while (x > 0) {
        return x;
    }
}

fn main(): int {
    return 0;
}
